# harvard-style-resume-coverletter-generator

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  _validate.py  app.py  generate_coverletter.py  generate_resume.py  pyproject.toml  run.bat
banks/: certifications.txt  cv.txt  projects.txt  prompt.txt
resume_generator/: __init__.py  builder.py  deepseek.py  job_models.py  models.py  parser.py  pdf.py  persist.py  renderer.py  scraper.py  validate.py
