[project]
name = "resumegeneratorscripts"
version = "0.2.0"
description = "Resume and cover letter generator with Streamlit UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.0",
    "streamlit>=1.28",
    "pywin32>=300; platform_system == 'Windows'",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "playwright>=1.40",
]
